# salk_turnout_models

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: census.csv  census_2022.xlsx  census_base.csv  rahvastik_n_2022.csv
data/estonia_turnout/: rk2023_age_group_margins.csv  rk2023_age_group_turnout.csv  rk2023_gender_margins.csv  rk2023_gender_turnout.csv  rk2023_unit_margins.csv  rk2023_unit_turnout.csv  survey.csv  survey_base.csv  survey_qfree.csv
data/model_test/: municipality_margins.csv  survey.csv  unit_margins.csv
estonia_turnout/: betabinomial-margins.ipynb  estonia_turnout.ipynb
salk_turnout_models/: __init__.py  models.py
simulation_study/: coverage-rerun.ipynb  generate-simulation-datasets.ipynb  run-simulations.ipynb  run-simulations.py  simulation-figures.ipynb  simulation-numbers.ipynb  test_nutpie_target_accept.py  test_pymc_target_accept.py
tmp/models/: 2026-06-07_00:36:06_model_results.csv  model_results.csv
